--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tensorflow/tfjs": "^4.21.0",
     "@types/three": "^0.168.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.439.0",
     "next": "14.2.8",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.168.0"
   },
   "devDependencies": {
